--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -626,7 +626,7 @@
                 android:layout_height="wrap_content" />
         </LinearLayout>
 
-        <!-- GPU加速开关 -->
+        <!-- 后端偏好选择 -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -638,13 +638,14 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/label_use_gpu"
+                android:text="@string/label_backend_preference"
                 android:textSize="16sp" />
 
-            <androidx.appcompat.widget.SwitchCompat
-                android:id="@+id/switchUseGpu"
+            <Spinner
+                android:id="@+id/spinnerBackendPreference"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:minWidth="120dp" />
         </LinearLayout>
 
         <!-- 字体大小调整 -->
